[gd_scene load_steps=19 format=3 uid="uid://cd5s5a61atoor"]

[ext_resource type="PackedScene" uid="uid://eweijww3514t" path="res://enemy/enemy.tscn" id="1_m7dvm"]
[ext_resource type="Script" path="res://enemy/circler/circler.gd" id="2_6d5c1"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="2_l3du2"]
[ext_resource type="PackedScene" uid="uid://ddyu40anul43d" path="res://enemy/enemy_bullet.tscn" id="3_f4fvv"]
[ext_resource type="PackedScene" uid="uid://blmm5mho60lvj" path="res://assets/explosions/small_explosion.tscn" id="4_k2niy"]
[ext_resource type="Texture2D" uid="uid://dlx5oyl8gkhm3" path="res://assets/enemies/metal plating textures/metal_0077_color_2k.jpg" id="5_2pkxm"]
[ext_resource type="PackedScene" uid="uid://d3ayanawo7xvu" path="res://assets/enemies/test_enemy.glb" id="5_pme4k"]
[ext_resource type="PackedScene" uid="uid://dnbvfoexm5ba5" path="res://assets/explosions/scrap_particles.tscn" id="5_thofp"]
[ext_resource type="Texture2D" uid="uid://c5mh3853eb661" path="res://assets/enemies/metal plating textures/metal_0077_ao_2k.jpg" id="6_33ueu"]
[ext_resource type="Texture2D" uid="uid://dwkawfvfl1vh1" path="res://assets/enemies/metal plating textures/metal_0077_metallic_2k.jpg" id="7_q40rn"]
[ext_resource type="Texture2D" uid="uid://bbw8bdon0nel" path="res://assets/enemies/metal plating textures/metal_0077_normal_opengl_2k.png" id="8_0c5e2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0rm7j"]
size = Vector3(1, 1.11691, 1.5473)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b5r2b"]
albedo_texture = ExtResource("5_2pkxm")
metallic = 1.0
metallic_texture = ExtResource("7_q40rn")
normal_enabled = true
normal_texture = ExtResource("8_0c5e2")
ao_enabled = true
ao_texture = ExtResource("6_33ueu")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4xpq2"]
albedo_color = Color(1, 0.368627, 0.368627, 1)
albedo_texture = ExtResource("5_2pkxm")
metallic = 1.0
metallic_texture = ExtResource("7_q40rn")
normal_enabled = true
normal_texture = ExtResource("8_0c5e2")
ao_enabled = true
ao_texture = ExtResource("6_33ueu")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_du5vw"]
albedo_color = Color(0, 0, 0, 1)
metallic_specular = 0.83
roughness = 0.0

[sub_resource type="Animation" id="Animation_8j0i6"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MissileTarget/CollisionShape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealthArea/CollisionShape3D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_je2t8"]
resource_name = "asleep"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HealthArea/CollisionShape3D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MissileTarget/CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kxpmn"]
_data = {
"RESET": SubResource("Animation_8j0i6"),
"asleep": SubResource("Animation_je2t8")
}

[node name="Circler" instance=ExtResource("1_m7dvm")]
script = ExtResource("2_6d5c1")
path_curve = null
speed = 16.0
shoot_time = 2.5
burst_delay = 0.2
max_shoot_times = 1
shoot_amount = 3
bullet_scene = ExtResource("3_f4fvv")
awake_on_collision = false
activation_distance = 0.1

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0123596)
shape = SubResource("BoxShape3D_0rm7j")

[node name="Mesh" type="Node3D" parent="." index="1"]

[node name="test_enemy" parent="Mesh" index="0" instance=ExtResource("5_pme4k")]
transform = Transform3D(7.42939e-08, 0, -0.397782, 0, 0.397782, 0, 0.397782, 0, 7.42939e-08, 0, 0, 0.157112)

[node name="Cube_001" parent="Mesh/test_enemy" index="0"]
material_override = SubResource("StandardMaterial3D_b5r2b")

[node name="Cube_003" parent="Mesh/test_enemy" index="1"]
material_override = SubResource("StandardMaterial3D_4xpq2")

[node name="Cube" parent="Mesh/test_enemy" index="2"]
material_override = SubResource("StandardMaterial3D_4xpq2")

[node name="Cube_002" parent="Mesh/test_enemy" index="3"]
material_override = SubResource("StandardMaterial3D_du5vw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HealthArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0123596)
shape = SubResource("BoxShape3D_0rm7j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MissileTarget" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0123596)
shape = SubResource("BoxShape3D_0rm7j")

[node name="Path3D" type="Path3D" parent="." index="4"]

[node name="PathFollow3D" type="PathFollow3D" parent="Path3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.29311e-09, 24.6883, -0.0834234)
rotation_mode = 0
loop = false

[node name="SmallExplosion" parent="." index="5" instance=ExtResource("4_k2niy")]

[node name="ScrapParticles" parent="." index="6" instance=ExtResource("5_thofp")]

[node name="ShootTimer" type="Timer" parent="." index="7"]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
libraries = {
"": SubResource("AnimationLibrary_kxpmn")
}
autoplay = "asleep"

[node name="Awake" parent="StateChart/Active/Asleep" index="0"]
to = NodePath("../../Awake")

[node name="Awake" type="Node" parent="StateChart/Active" index="2"]
script = ExtResource("2_l3du2")

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="state_entered" from="StateChart/Active/Awake" to="." method="_on_awake_state_entered"]
[connection signal="state_processing" from="StateChart/Active/Awake" to="." method="_on_awake_state_processing"]

[editable path="Mesh/test_enemy"]
